--- a/Slideshow/index.html
+++ b/Slideshow/index.html
@@ -3,7 +3,7 @@
 <head>  
     <meta charset="utf-8" />  
     <title>Project 4 Slideshow</title>  
-    
+    <link rel="stylesheet" href="./style.css">
 </head>  
 <body>  
     <div class="slidercontainer">  
@@ -28,7 +28,7 @@
         <a class="left" onclick="nextSlide(-1)">❮</a>  
         <a class="right" onclick="nextSlide(1)">❯</a>  
     </div>  
-  
+  <script src="./script.js"></script>
 </body>  
 </html>  
 <!--Images credits Unsplash--> 
