--- a/Countdown Timer/index.html
+++ b/Countdown Timer/index.html
@@ -1,1 +1,18 @@
-<h2 id="demo"></h2> 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Countdown Timer</title>
+</head>
+
+<body>
+    <h2 id="demo"></h2>
+
+    <script src="script.js"></script>
+</body>
+
+</html>
