--- a/Digital Clock/index.html
+++ b/Digital Clock/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="style.css">
   <title>Digital Clock</title>
 </head>
+
 <body>
-<div id="clock" class="clock"></div>
+  <div id="clock" class="clock"></div>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
