notes app reviewed

--- a/Notes App/index.html
+++ b/Notes App/index.html
@@ -1,7 +1,15 @@
-<!-- bootstrap cdn -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
- integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<div class="container my-3">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title>My Notes App</title>
+</head>
+<body>
+    <div class="container my-3">
         <h1>My Notes App</h1>
         <div class="card">
             <div class="card-body">
@@ -17,3 +25,7 @@
         <hr>
         <div id="notes" class="row container-fluid"> </div>
     </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
