--- a/Slideshow/index.html
+++ b/Slideshow/index.html
@@ -1,34 +1,41 @@
-<!DOCTYPE html>  
-<html>  
-<head>  
-    <meta charset="utf-8" />  
-    <title>Project 4 Slideshow</title>  
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Project 4 Slideshow</title>
     <link rel="stylesheet" href="./style.css">
-</head>  
-<body>  
-    <div class="slidercontainer">  
-        <div class="showSlide fade">  
-            <img src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60" />  
-            <div class="content">The Valley</div>  
-        </div>  
-        <div class="showSlide fade">  
-            <img src="https://images.unsplash.com/photo-1510784722466-f2aa9c52fff6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fG5hdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=700&q=60" />  
-            <div class="content">The View</div>  
-        </div>  
- 
-        <div class="showSlide fade">  
-            <img src="https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fG5hdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=700&q=60" />  
-            <div class="content">The Sea</div>  
-        </div>  
-        <div class="showSlide fade">  
-            <img src="https://images.unsplash.com/photo-1447752875215-b2761acb3c5d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60" />  
-            <div class="content">The Trees</div>  
-        </div>  
-        <!-- Navigation arrows -->  
-        <a class="left" onclick="nextSlide(-1)">❮</a>  
-        <a class="right" onclick="nextSlide(1)">❯</a>  
-    </div>  
-  <script src="./script.js"></script>
-</body>  
-</html>  
-<!--Images credits Unsplash--> 
+</head>
+
+<body>
+    <div class="slidercontainer">
+        <div class="showSlide fade">
+            <img
+                src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60" />
+            <div class="content">The Valley</div>
+        </div>
+        <div class="showSlide fade">
+            <img
+                src="https://images.unsplash.com/photo-1510784722466-f2aa9c52fff6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fG5hdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=700&q=60" />
+            <div class="content">The View</div>
+        </div>
+
+        <div class="showSlide fade">
+            <img
+                src="https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fG5hdHVyZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=700&q=60" />
+            <div class="content">The Sea</div>
+        </div>
+        <div class="showSlide fade">
+            <img
+                src="https://images.unsplash.com/photo-1447752875215-b2761acb3c5d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60" />
+            <div class="content">The Trees</div>
+        </div>
+        <!-- Navigation arrows -->
+        <a class="left" onclick="nextSlide(-1)">❮</a>
+        <a class="right" onclick="nextSlide(1)">❯</a>
+    </div>
+    <script src="./script.js"></script>
+</body>
+
+</html>
+<!--Images credits Unsplash-->
