--- a/Stopwatch/index.html
+++ b/Stopwatch/index.html
@@ -1,13 +1,26 @@
-<div class="wrapper">
+<!DOCTYPE html>
+<html lang="en">
 
-  <h2>Stopwatch using JavaScript</h2>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Stopwatch</title>
+</head>
 
-  <p><span id="seconds">00</span>:<span id="tens">00</span></p>
+<body>
+  <div class="wrapper">
 
-  <button id="button-start">Start</button>
+    <h2>Stopwatch using JavaScript</h2>
+    <p><span id="seconds">00</span>:<span id="tens">00</span></p>
+    <button id="button-start">Start</button>
+    <button id="button-stop">Stop</button>
+    <button id="button-reset">Reset</button>
 
-  <button id="button-stop">Stop</button>
+  </div>
 
-  <button id="button-reset">Reset</button>
+  <script src="script.js"></script>
+</body>
 
-</div>
+</html>
