todo list reviewed

--- a/Todo List/index.html
+++ b/Todo List/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style.css">
   <title>Todo List App</title>
 </head>
+
 <body>
-<div class="container">
-<div id="newtask">
-    <input type="text" placeholder="Task to be done..">
-    <button id="push">Add</button>
-</div>
-<div id="tasks"></div>
-</div>
+  <div class="container">
+    <div id="newtask">
+      <input type="text" placeholder="Task to be done..">
+      <button id="push">Add</button>
+    </div>
+    <div id="tasks"></div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
