weather app reviewed

--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="style.css">
   <title>Weather App</title>
 </head>
+
 <body>
-<form id="form">
-        <input type="text" id="search" placeholder="Search By Loaction" autocomplete="off">
-    </form>
-    <main id="main">
-    </main>
+  <form id="form">
+    <input type="text" id="search" placeholder="Search By Loaction" autocomplete="off">
+  </form>
+  <main id="main"></main>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
