--- a/Todo_List/index.html
+++ b/Todo_List/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="script.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<link rel="stylesheet" href="style.css">
   <title>Todo List App</title>
 </head>
 <body>
