--- a/Stopwatch/index.html
+++ b/Stopwatch/index.html
@@ -1,13 +1,21 @@
-<div class="wrapper">
+<html>
+<head>
+	<script src="script.js"></script>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<div class="wrapper">
 
-  <h2>Stopwatch using JavaScript</h2>
+	  <h2>Stopwatch using JavaScript</h2>
 
-  <p><span id="seconds">00</span>:<span id="tens">00</span></p>
+	  <p><span id="seconds">00</span>:<span id="tens">00</span></p>
 
-  <button id="button-start">Start</button>
+	  <button id="button-start">Start</button>
 
-  <button id="button-stop">Stop</button>
+	  <button id="button-stop">Stop</button>
 
-  <button id="button-reset">Reset</button>
+	  <button id="button-reset">Reset</button>
 
-</div>
+	</div>
+</body>
+
