--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="script.js"></script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Weather App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <form id="form">
