--- a/Digital Clock/index.html
+++ b/Digital Clock/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="./style.css">
   <title>Digital Clock</title>
 </head>
 <body>
 <div id="clock" class="clock"></div>
+  <script src="./script.js"></script>
 </body>
 </html>
