--- a/Stopwatch/index.html
+++ b/Stopwatch/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="./style.css">
 <div class="wrapper">
 
   <h2>Stopwatch using JavaScript</h2>
@@ -11,3 +12,4 @@
   <button id="button-reset">Reset</button>
 
 </div>
+<script src="./script.js"></script>
