--- a/Tip Calculator/index.html
+++ b/Tip Calculator/index.html
@@ -1,4 +1,5 @@
 <html>
+	<link rel="stylesheet" href="./style.css">
 <body>
 	<div id="container">
   <h1>Tip Calculator</h1>
@@ -29,6 +30,7 @@
     <small id="each">each</small>
   </div>
 </div>
+	<script src="./script.js"></script>
 </body>
 
 </html>
