--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="./style.css">
   <title>Weather App</title>
 </head>
 <body>
@@ -11,5 +12,6 @@
     </form>
     <main id="main">
     </main>
+  <script src="./script.js"></script>
 </body>
 </html>
