--- a/Battery Status API/index.html
+++ b/Battery Status API/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="./style.css">
+<!-- HTML -->
 <div class="battery">
 
   <div class="main_container">
@@ -29,3 +31,4 @@
   <div class="right_bar"></div>
 
 </div>
+<script src="./script.js"></script>
